K8S-definitions-files/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      name: vproapp
      labels:
        app: vproapp
    spec:
      containers:
        - name: vproapp-container
          image: vanluong2003/vproapp
          ports:
            - name: vproapp-port
              containerPort: 8080
