K8S-definitions-files/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
        - name: vprodb-container
          image: vanluong2003/vprodb
          ports:
            - name: vprodb-port
              containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-volume
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-pvc
